--- a/launch.yaml
+++ b/launch.yaml
@@ -18,4 +18,6 @@ multibody configs:
   - "ADF/segmentation_camera.yaml" #4
   - "ADF/stereo_cameras.yaml" #5
   - "ADF/single_stereo_camera.yaml" #6
-  - "ADF/gaze_marker.yaml" #6
+  - "ADF/gaze_marker.yaml" #7
+
+  - "ADF/spine_256_seg5_0.yaml" #8
