fixed hardcoded part in EdtImageGeneration.

--- a/ADF/spine_256_P0.yaml
+++ b/ADF/spine_256_P0.yaml
@@ -25,3 +25,4 @@ VOLUME mastoidectomy_volume:
     path: ./shaders/volume/
     vertex: shader.vs
     fragment: shader_color.fs
+    # fragment: shader.fs
