--- a/ADF/spine_256_P0.yaml
+++ b/ADF/spine_256_P0.yaml
@@ -15,7 +15,7 @@ VOLUME mastoidectomy_volume:
     # position: {x: -5.35, y: 0.0, z: 0.2} 
     orientation: {r: 0, p: 0, y: 3.14}
   scale: 1.0
-  dimensions: {x: 0.598, y: 0.572, z: 1.0}
+  dimensions: {x: 0.598, y: 0.572, z: 1.0} # Change the dimension according to the size and number of images
   images:
     path: ../resources/volumes/spine_P0_visual_256/
     prefix: plane00
@@ -24,5 +24,17 @@ VOLUME mastoidectomy_volume:
   shaders:
     path: ./shaders/volume/
     vertex: shader.vs
-    fragment: shader_color.fs
-    # fragment: shader.fs
+    # fragment: shader_color_over.fs
+    fragment: shader.fs
+  color components:
+      ambient:
+        level: 1.0
+      diffuse:
+        b: 1.0
+        g: 1.0
+        r: 1.0
+      specular:
+        b: 0.39719
+        g: 0.39719
+        r: 0.42128
+      transparency: 1.0
