--- a/ADF/world/world.yaml
+++ b/ADF/world/world.yaml
@@ -1,5 +1,5 @@
 enclosure size: {length: 10.0, width: 10.0, height: 3.0}
-lights: [light1]
+lights: [light1, light2, light3]
 cameras: [main_camera]
 # cameras: [main_camera, cameraL, cameraR]
 environment: ./checkered_floor.yaml
