--- a/launch.yaml
+++ b/launch.yaml
@@ -22,3 +22,7 @@ multibody configs:
 
 
   - "ADF/spine_256_P0.yaml" #8
+  - "ADF/spine_256_P1.yaml" #9
+  - "ADF/spine_256_P2.yaml" #10
+  - "ADF/spine_256_P4.yaml" #11
+  - "ADF/spine_256_P7.yaml" #12
