--- a/scripts/study_gui/gui_setup.yaml
+++ b/scripts/study_gui/gui_setup.yaml
@@ -9,29 +9,35 @@ volumes: [volume1, volume2, volume3, volume4, volume5]
 volume1:
   icon_path: ./assets/RT143.png
   adf_path: ../../ADF/volume_256_RT143.yaml
+  sdf_path: ../../ADF/volume_256_RT143.yaml
   name: 'Anatomy a'
 
 volume1:
   icon_path: ./assets/RT143.png
   adf_path: ../../ADF/volume_256_RT143.yaml
+  sdf_path: ../../ADF/volume_256_RT143.yaml
   name: 'Anatomy a'
 
 volume2:
   icon_path: ./assets/RT138.png
   adf_path: ../../ADF/volume_256_RT138.yaml
+  sdf_path: ../../ADF/volume_256_RT143.yaml
   name: 'Anatomy b'
 
 volume3:
   icon_path: ./assets/RT147.png
   adf_path: ../../ADF/volume_256_RT147.yaml
+  sdf_path: ../../ADF/volume_256_RT143.yaml
   name: 'Anatomy c'
 
 volume4:
   icon_path: ./assets/LT143.png
   adf_path: ../../ADF/volume_256_LT143.yaml
+  sdf_path: ../../ADF/volume_256_RT143.yaml
   name: 'Anatomy d'
 
 volume5:
   icon_path: ./assets/LT151.png
   adf_path: ../../ADF/volume_256_LT151.yaml
+  sdf_path: ../../ADF/volume_256_RT143.yaml
   name: 'Anatomy e'
