--- a/scripts/study_gui/gui_setup.yaml
+++ b/scripts/study_gui/gui_setup.yaml
@@ -7,37 +7,41 @@ recording_base_path: "../../../Volumetric Drilling Userstudy/"
 
 volumes: [volume1, volume2, volume3, volume4, volume5]
 volume1:
-  icon_path: ./assets/RT143.png
-  adf_path: ../../ADF/volume_256_RT143.yaml
-  sdf_path: ../../ADF/volume_256_RT143.yaml
-  name: 'Anatomy a'
-
-volume1:
-  icon_path: ./assets/RT143.png
-  adf_path: ../../ADF/volume_256_RT143.yaml
-  sdf_path: ../../ADF/volume_256_RT143.yaml
-  name: 'Anatomy a'
+  icon_path: ./assets/spine_P0.png
+  adf_path: ../../ADF/spine_256_P0
+  sdf_path: ../../resources/edt_grids/spine_P0_256
+  unit: 0.0049
+  spacial_resolution: 0.48046899
+  name: 'Segments P0'
 
 volume2:
-  icon_path: ./assets/RT138.png
-  adf_path: ../../ADF/volume_256_RT138.yaml
-  sdf_path: ../../ADF/volume_256_RT143.yaml
-  name: 'Anatomy b'
+  icon_path: ./assets/spine_P0.png
+  adf_path: ../../ADF/spine_256_P1
+  sdf_path: ../../resources/edt_grids/spine_P1_256
+  unit: 0.005807622504537205
+  spacial_resolution: 0.3125
+  name: 'Segments P1'
 
 volume3:
-  icon_path: ./assets/RT147.png
-  adf_path: ../../ADF/volume_256_RT147.yaml
-  sdf_path: ../../ADF/volume_256_RT143.yaml
-  name: 'Anatomy c'
+  icon_path: ./assets/spine_P0.png
+  adf_path: ../../ADF/spine_256_P2
+  sdf_path: ../../resources/edt_grids/spine_P2_256
+  unit: 0.00583941605839416
+  spacial_resolution: 0.3125
+  name: 'Segments P2'
 
 volume4:
-  icon_path: ./assets/LT143.png
-  adf_path: ../../ADF/volume_256_LT143.yaml
-  sdf_path: ../../ADF/volume_256_RT143.yaml
-  name: 'Anatomy d'
+  icon_path: ./assets/spine_P0.png
+  adf_path: ../../ADF/spine_256_P4
+  sdf_path: ../../resources/edt_grids/spine_P4_256
+  unit: 0.005788450232894677
+  spacial_resolution: 0.31640625
+  name: 'Segments P4'
 
 volume5:
-  icon_path: ./assets/LT151.png
-  adf_path: ../../ADF/volume_256_LT151.yaml
-  sdf_path: ../../ADF/volume_256_RT143.yaml
-  name: 'Anatomy e'
+  icon_path: ./assets/spine_P0.png
+  adf_path: ../../ADF/spine_256_P7
+  sdf_path: ../../resources/edt_grids/spine_P7_256
+  unit: 0.006189547827709171
+  spacial_resolution: 0.42968801
+  name: 'Segments P7'
